--- a/final_llamaindex.ipynb
+++ b/final_llamaindex.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,7 +15,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "^C\n",
+            "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
+            "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
@@ -93,26 +95,6 @@
         "\n",
         "# def load_document(file_path):\n",
         "#     return loader.load(file_path)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # Create a multiprocessing pool\n",
-        "# pool = multiprocessing.Pool()\n",
-        "\n",
-        "# # Load all the PDF documents in parallel\n",
-        "# docs = pool.map(load_document, pdf_file_paths)\n",
-        "\n",
-        "# # Close the multiprocessing pool\n",
-        "# pool.close()\n",
-        "# pool.join()\n",
-        "\n",
-        "# # Flatten the list of lists into a single list of documents\n",
-        "# flattened_docs = list(itertools.chain(*docs))"
       ]
     },
     {
