removed unnecessary func, added a comment

--- a/llama_with_ray.ipynb
+++ b/llama_with_ray.ipynb
@@ -449,10 +449,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# apparently sets the environment to use 8 threads\n",
     "import torch\n",
     "torch.set_num_threads(8)"
    ]
@@ -475,39 +476,7 @@
     "    num_cpus=1,\n",
     "    # There are 4 GPUs in the cluster. Each actor uses 1 GPU. So we want 4 total actors.\n",
     "    compute=ActorPoolStrategy(size=5)\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# alternate way of embedding:\n",
-    "\n",
-    "# def embed_nodes(nodes: List[Node]) -> List[Node]:\n",
-    "#     embedding_model = LangchainEmbedding(\n",
-    "#             HuggingFaceEmbeddings(\n",
-    "#                 model_name=\"BAAI/bge-large-en-v1.5\",\n",
-    "#                 model_kwargs={\"device\": \"cpu\"},\n",
-    "#                 cache_folder='./bge_model',\n",
-    "#                 encode_kwargs={\"device\": \"cpu\"}\n",
-    "#                 )\n",
-    "#     )\n",
-    "\n",
-    "#     embeddings = embedding_model.embed_documents([node.text for node in nodes])\n",
-    "#     assert len(nodes) == len(embeddings)\n",
-    "\n",
-    "#     for node, embedding in zip(nodes, embeddings):\n",
-    "#         node.embedding = embedding\n",
-    "\n",
-    "#     return nodes\n",
-    "\n",
-    "# embedded_nodes = nodes.map_batches(\n",
-    "#     embed_nodes,\n",
-    "#     batch_size=100,\n",
-    "# )\n"
+    "    )"
    ]
   },
   {
